--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -9,6 +9,22 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
 </head>
 <body>
+    {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}">
+            <button>로그아웃</button>
+        </a>
+        안녕하세요! {{user}}님!
+    {% else %}
+        <a href="{% url 'signup' %}">
+            <button>회원가입</button>
+        </a>
+
+        <a href="{% url 'login' %}">
+            <button>로그인</button>
+        </a>
+    {% endif %}
+
+
     <div class="make_jss">
         
             <div class="plus_btn">
@@ -18,12 +34,26 @@
         <p>자기소개서 작성</p>
     </div>
 
+    {% if user.is_authenticated %}
+        <a href="{% url 'my_index' %}">
+            <button>내 자기소개서만 보기</button>
+        </a>
+        <a href="{% url 'home' %}">
+            <button>모든 자기소개서 보기</button>
+        </a>
+    {% endif %}
+    
+    <br>
+
     {% for jss in all_jss %}
+    <a href="{% url 'detail' jss.id%}">
         <div class="all_jss">
+            <p>{{jss.author}}</p>
             <p>{{jss.title}}</p>
             <p>{{jss.content}}</p>
             <p>{{jss.updated_at|date:"Y-m-d"}}</p>
         </div>
+    </a>
     {% endfor %}
     
 </body>
