--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,60 +1,39 @@
+{% extends 'base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자소설 닷컴</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
-</head>
-<body>
+{% block title %}자소설닷컴{% endblock %}
+{% block link %}{% static 'css/home.css' %}{% endblock %}
+
+{% block content %}
+
+<div align="center">
     {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}">
-            <button>로그아웃</button>
-        </a>
-        안녕하세요! {{user}}님!
-    {% else %}
-        <a href="{% url 'signup' %}">
-            <button>회원가입</button>
-        </a>
-
-        <a href="{% url 'login' %}">
-            <button>로그인</button>
-        </a>
-    {% endif %}
-
-
-    <div class="make_jss">
-        
-            <div class="plus_btn">
-                <a href="{% url 'create' %}"> + </a>
-            </div>
-    
-        <p>자기소개서 작성</p>
-    </div>
-
-    {% if user.is_authenticated %}
-        <a href="{% url 'my_index' %}">
-            <button>내 자기소개서만 보기</button>
-        </a>
-        <a href="{% url 'home' %}">
-            <button>모든 자기소개서 보기</button>
-        </a>
+    <a href="{% url 'my_index' %}">
+        <button>내 자기소개서만 보기</button>
+    </a>
+    <a href="{% url 'home' %}">
+        <button>모든 자기소개서 보기</button>
+    </a>
     {% endif %}
     
     <br>
-
-    {% for jss in all_jss %}
-    <a href="{% url 'detail' jss.id%}">
-        <div class="all_jss">
-            <p>{{jss.author}}</p>
-            <p>{{jss.title}}</p>
-            <p>{{jss.content}}</p>
-            <p>{{jss.updated_at|date:"Y-m-d"}}</p>
-        </div>
-    </a>
-    {% endfor %}
     
-</body>
-</html>
+    <table>
+        <tr>
+            {% for jss in all_jss %}
+            <td>
+                <a href="{% url 'detail' jss.id%}">
+                    <div class="all_jss">
+                        <p>{{jss.author}}</p>
+                        <p>{{jss.title}}</p>
+                        <p>{{jss.content}}</p>
+                        <p>{{jss.updated_at|date:"Y-m-d"}}</p>
+                    </div>
+                </a>
+            </td>
+            {% endfor %}
+        </tr>
+    </table>
+</div>
+
+{% endblock %}
