--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -6,11 +6,13 @@
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 10px;
+    font-family: 'Handon3gyeopsal300g';
 }
 
 h2 {
     margin-top: 5px;
     text-align: center;
+    font-weight: bold;
 }
 
 .jss_time {
@@ -20,8 +22,9 @@ h2 {
     margin-right: 10px;
 }
 
-#draw_hr, hr {
+#draw_hr {
     border-bottom: 3px dashed #535151;
+    width: 680px;
 }
 
 #jss_content {
@@ -37,4 +40,18 @@ h2 {
 
 form {
     margin-bottom: 10px;
+}
+
+.fix {
+    padding-right: 25px;
+}
+
+.comment_delete, .check {
+    width: 22px;
+    height: 22px;
+}
+
+button {
+    background-color: #FBFBF7;
+    border: none;
 }
